<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.fragments.SettingFragment">

    <data>
        <variable
            name="isSignedIn"
            type="boolean"/>

        <variable
            name="clicked"
            type="boolean"/>
        <variable
            name="viewModel"
            type="com.unitewikiapp.unitewiki.viewmodels.LoginViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:contentInsetLeft="0dp"
                android:contentInsetStart="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                android:contentInsetRight="0dp"
                android:contentInsetEnd="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetEnd="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/navigate_backbtn"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:src="@drawable/back_button_nocircle"
                        android:clickable="true"
                        android:background="?attr/selectableItemBackgroundBorderless"/>

                    <TextView
                        android:id="@+id/toolbartitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/aritadotum_medium"
                        android:text="@string/Setting"
                        android:textSize="25sp"/>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/userlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                app:isVisible="@{isSignedIn}">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/namelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent">
                    <TextView
                        android:id="@+id/userDisplayName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.currentUser.displayName}"
                        android:textSize="35sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/aritadotum"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/namelayout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="1dp"
                    android:text="@{viewModel.currentUser.email}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_loginwithother"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/userlayout"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/btn_google_signin_light_normal_hdpi"
                android:clickable="true"
                isVisible="@{isSignedIn}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginwithotheraccount"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_loginwithother"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                isVisible="@{isSignedIn}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:layout_marginLeft="50dp"
                    android:textSize="20sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_logout"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                isVisible="@{isSignedIn}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/langauge"
                    android:layout_marginLeft="50dp"
                    android:textSize="20sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_bussiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_language"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                isVisible="@{isSignedIn}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bussinessandsuggestions"
                    android:layout_marginLeft="50dp"
                    android:textSize="20sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/bussiness_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_bussiness"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                isVisible="@{isSignedIn}">

                <TextView
                    android:id="@+id/indicator1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Thisappisfanapp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="25dp"
                    android:textSize="13sp"
                    isVisible="@{clicked}"/>

                <TextView
                    android:id="@+id/indicator2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unitewikigmail"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="5dp"
                    android:textSize="13sp"
                    isVisible="@{clicked}"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="150dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/btn_google_signin_light_normal_hdpi"
                android:clickable="true"
                isVisible="@{!isSignedIn}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <RelativeLayout
                android:id="@+id/btn_language_whenlogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                isVisible="@{!isSignedIn}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/langauge"
                    android:layout_marginLeft="50dp"
                    android:textSize="20sp"/>
            </RelativeLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_bussiness_whenlogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_language_whenlogout"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                isVisible="@{!isSignedIn}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bussinessandsuggestions"
                    android:layout_marginLeft="50dp"
                    android:textSize="20sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/bussiness_detail_whenlogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_bussiness_whenlogout"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                isVisible="@{!isSignedIn}">

                <TextView
                    android:id="@+id/indicator1_whenlogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Thisappisfanapp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="25dp"
                    android:textSize="13sp"
                    isVisible="@{clicked}"/>

                <TextView
                    android:id="@+id/indicator2_whenlogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unitewikigmail"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="5dp"
                    android:textSize="13sp"
                    isVisible="@{clicked}"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/UGC_aboutreport"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commnutiryrule"
                android:layout_marginTop="5dp"
                android:textSize="13sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>