<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.ReviewWritingFragment">

    <data>
        <variable
            name="infoVm"
            type="com.unitewikiapp.unitewiki.viewmodels.PokemonInfoViewModel" />
        <variable
            name="reviewVm"
            type="com.unitewikiapp.unitewiki.viewmodels.PokemonReviewsViewModel" />

        <variable
            name="skill1Selected"
            type="boolean"/>
        <variable
            name="skill3Selected"
            type="boolean" />
    </data>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/navigate_backbtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/back_button_nocircle"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <TextView
            android:id="@+id/pokemon_name_intoolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/aritadotum_medium"
            app:localizedText="@{infoVm.currentPokemon.pokemon_name}"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/reviewindicatortext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pokemon_name_intoolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="2dp"
            android:text="@string/ratethispokemon"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/button_commit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingEnd="15dp"
            android:paddingStart="10dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/post"
            android:textSize="20sp"
            android:textColor="@color/supportorange"
            android:background="?attr/selectableItemBackground"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bottom_border">
                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:numStars="5"
                    android:progressDrawable="@drawable/custom_ratingbar_spacing"
                    android:rating="@{reviewVm.draft.rating}"
                    android:stepSize="1"
                    android:isIndicator="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommendedmoves" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bottom_border"
                android:paddingBottom="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/skillset1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/skillset2"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/skilllevel1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/aritadotum"
                        android:text="@{infoVm.currentPokemon.skills[0].min_level}"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/skill1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/skill1"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        app:imageFromUrl="@{infoVm.currentPokemon.skills[0].ic}"
                        app:isLeftSelected="@{skill1Selected}"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/skilllevel1" />

                    <ImageView
                        android:id="@+id/skill1_circle"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_thick_circle"
                        android:visibility="invisible"
                        app:isVisible="@{skill1Selected}"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/skilllevel1" />

                    <ImageView
                        android:id="@+id/skill2"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        app:isLeftSelected="@{!skill1Selected}"
                        app:imageFromUrl="@{infoVm.currentPokemon.skills[1].ic}"
                        app:layout_constraintLeft_toRightOf="@id/skill1"
                        app:layout_constraintTop_toBottomOf="@id/skilllevel1" />

                    <ImageView
                        android:id="@+id/skill2_circle"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_thick_circle"
                        app:isVisible="@{!skill1Selected}"
                        android:visibility="invisible"
                        app:layout_constraintLeft_toRightOf="@id/skill1"
                        app:layout_constraintTop_toBottomOf="@id/skilllevel1" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/skillset2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/skillset1"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/skilllevel2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@{infoVm.currentPokemon.skills[2].min_level}"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/skill3"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/skill3"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        app:isLeftSelected="@{skill3Selected}"
                        app:imageFromUrl="@{infoVm.currentPokemon.skills[2].ic}"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/skilllevel2" />

                    <ImageView
                        android:id="@+id/skill3_circle"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_thick_circle"
                        app:isVisible="@{skill3Selected}"
                        android:visibility="invisible"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/skilllevel2" />

                    <ImageView
                        android:id="@+id/skill4"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        app:isLeftSelected="@{!skill3Selected}"
                        app:imageFromUrl="@{infoVm.currentPokemon.skills[3].ic}"
                        app:layout_constraintLeft_toRightOf="@id/skill3"
                        app:layout_constraintTop_toBottomOf="@id/skilllevel2" />

                    <ImageView
                        android:id="@+id/skill4_circle"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:visibility="invisible"
                        app:isVisible="@{!skill3Selected}"
                        android:src="@drawable/ic_thin_circle"
                        app:layout_constraintLeft_toRightOf="@id/skill3"
                        app:layout_constraintTop_toBottomOf="@id/skilllevel2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/reviewwrting" />

            <EditText
                android:id="@+id/review_writing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/square_border"
                android:padding="10dp"
                android:hint="@string/pleaseenteryourguide"
                android:text="@{reviewVm.draft.writing}"
                android:maxLength="1000" />

            <TextView
                android:id="@+id/reviewlen_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="2dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="25dp"
                android:text="0/1000" />

            <TextView
                android:id="@+id/UGC_communityrules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="left"
                android:layout_marginTop="20dp"
                android:text="@string/commnutiryrule" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>